unpackaged/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Account_Number_Field_Objects__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Number_Field_Objects__c</fullName>
    <defaultValue>"Opportunity, ucinn_ascendv2__Payment__c"</defaultValue>
    <inlineHelpText>Include the object(s) to apply the rules for storing ACH / Direct Debit Account Number data. The default package value is "Opportunity, ucinn_ascendv2__Payment__c".</inlineHelpText>
    <label>Account Number Field Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>