unpackaged/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Account_Number_Masking_Character__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Account_Number_Masking_Character__c</fullName>
    <defaultValue>'x'</defaultValue>
    <inlineHelpText>If you opt to store Masked &amp; Unencrypted data, this character will be used to mask the ACH / Direct Debit Account Number.</inlineHelpText>
    <label>Account Number Masking Character</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#</fullName>
                <default>true</default>
                <label>#</label>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>x</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>