unpackaged/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Adjustment_History_Columns__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Adjustment_History_Columns__c</fullName>
    <inlineHelpText>JSON string to override adjustment history table columns.

Ex:
[ { "fieldName": "Name" },
  { "label": "Adjustment Type",
     "fieldName": "Adjustment_Type__c" }
]</inlineHelpText>
    <label>Adjustment History Columns (DEPR)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>