unpackaged/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Batchify_Validation_Style__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Batchify_Validation_Style__c</fullName>
    <description>Maps validation to the cells styling.
EX)
{
  "ERROR": {
    "background-color": "red"
  },
  "WARNING": {
    "background-color": "black"
  }
}</description>
    <inlineHelpText>Maps validation to the cells styling.
EX)
{
  "ERROR": {
    "background-color": "red"
  },
  "WARNING": {
    "background-color": "black"
  }
}</inlineHelpText>
    <label>Batchify Validation Style</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>