unpackaged/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Conversion_Date_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Conversion_Date_Mapping__c</fullName>
    <label>Conversion Date Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>