unpackaged/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Currency_Symbol_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Currency_Symbol_Mapping__c</fullName>
    <label>Currency Symbol Mapping</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>