unpackaged/main/default/objects/ucinn_ascendv2__Gift_Processing_Setting__mdt/fields/ucinn_ascendv2__Field_Change_Event_Mapping__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Change_Event_Mapping__c</fullName>
    <description>Configuration pertaining to fields on the transaction entry layout that throw events.</description>
    <inlineHelpText>Configuration pertaining to fields on the transaction entry layout that throw events.</inlineHelpText>
    <label>Field Change Event Mapping</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>